trunk/Archive2/23/9beb844b9bf027/output
main.cpp:2:5: error: use of undeclared identifier 'size_t'; did you mean 'sizeof'?
    size_t x = 3;
    ^~~~~~
    sizeof
main.cpp:2:12: error: use of undeclared identifier 'x'
    size_t x = 3;
           ^
main.cpp:3:5: error: use of undeclared identifier 'x'
    x = x;
    ^
main.cpp:3:9: error: use of undeclared identifier 'x'
    x = x;
        ^
4 errors generated.
gcc:
main.cpp: In function 'int main()':
main.cpp:2:5: error: 'size_t' was not declared in this scope
     size_t x = 3;
     ^
main.cpp:3:5: error: 'x' was not declared in this scope
     x = x;
     ^
